[tool.poetry]
name = "rfw"
version = "0.1.0"
description = "Robotics middleware for Micropython"
authors = ["Eric Miller <eric@legoaces.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
